--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -80,6 +80,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
+		"drizzle-orm": "^0.41.0",
 		"lucide-react": "^0.488.0",
 		"motion": "^12.7.2",
 		"nanoid": "^5.1.5",
@@ -88,6 +89,7 @@
 		"next-themes": "^0.4.6",
 		"nuqs": "^2.4.2",
 		"octokit": "^4.1.3",
+		"postgres": "^3.4.5",
 		"react": "^19.1.0",
 		"react-day-picker": "^9.6.7",
 		"react-dom": "^19.1.0",
@@ -133,6 +135,7 @@
 		"@vitest/browser": "3.1.1",
 		"@vitest/coverage-v8": "^3.1.1",
 		"better-supabase-types": "^2.7.6",
+		"drizzle-kit": "^0.30.6",
 		"glob": "^11.0.1",
 		"jsdom": "^26.1.0",
 		"lefthook": "^1.11.10",
@@ -142,6 +145,7 @@
 		"storybook-addon-tag-badges": "^1.4.0",
 		"supabase": "^2.20.12",
 		"tailwindcss": "^4.1.4",
+		"tsx": "^4.19.3",
 		"typescript": "^5.8.3",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.1.1",
