--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,6 +43,7 @@
 		}
 	},
 	"dependencies": {
+		"@nito/db": "workspace:*",
 		"@ai-sdk/anthropic": "^1.2.10",
 		"@dnd-kit/core": "^6.3.1",
 		"@dnd-kit/modifiers": "^9.0.0",
@@ -145,7 +146,6 @@
 		"storybook-addon-tag-badges": "^1.4.0",
 		"supabase": "^2.20.12",
 		"tailwindcss": "^4.1.4",
-		"tsx": "^4.19.3",
 		"typescript": "^5.8.3",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.1.1",
