--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,6 +15,7 @@
 		"seed": "tsx src/seed/seed.ts"
 	},
 	"dependencies": {
+		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.41.0",
 		"postgres": "^3.4.5"
 	},
